タップによりチームを次々に表示するようにした

--- a/team-builder/Base.lproj/Main.storyboard
+++ b/team-builder/Base.lproj/Main.storyboard
@@ -22,8 +22,8 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="xKg-aQ-O7h">
-                                <rect key="frame" x="20" y="471" width="280" height="77"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="xKg-aQ-O7h">
+                                <rect key="frame" x="20" y="368" width="280" height="77"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
@@ -42,7 +42,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9QH-sI-ejt" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="ghf-Zv-E8t"/>
+                <tapGestureRecognizer id="ghf-Zv-E8t">
+                    <connections>
+                        <action selector="bkgTapped:" destination="9gt-jj-bxN" id="jgZ-og-99J"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="818" y="596"/>
         </scene>
