入力文字数制限をかけた

--- a/team-builder/Base.lproj/Main.storyboard
+++ b/team-builder/Base.lproj/Main.storyboard
@@ -108,6 +108,9 @@
                                 <color key="textColor" red="0.29411764709999999" green="0.28627450980000002" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <connections>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="RY6-ht-ebk"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="人" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Pd-9D-YAj">
                                 <rect key="frame" x="232" y="105" width="17" height="21"/>
